tests/cases/compiler-development/artifact/errors/diagnostic-union-by-enum-unknown-arm.ari
enum CipherType {
  stream,
  block,
}

struct SecurityParameters {
  cipher_type: CipherType,
}

struct TLSCiphertext {
  security: SecurityParameters,
  fragment: union by security.cipher_type {
    stream => i64,
    aead => i64,
  },
}

fn main() -> i64 {
  return 0;
}
